# OpenWolf-Engine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.txt  README.md  SECURITY.md  astyle  astyle-options.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
cmake/: FindBZ2.cmake  FindCURL.cmake  FindFreetype.cmake  FindGEOIP.cmake  FindJPEG.cmake  FindMySQL.cmake  FindOggVorbis.cmake  FindOpenAL.cmake  FindOpenSSL.cmake  FindPDCurses.cmake  FindPNG.cmake  FindSDL.cmake  FindSixense.cmake  FindSodium.cmake  FindWebP.cmake  FindZlib.cmake  appConfig.h.in  appConfig.hpp.in  precompiledHeaders.cmake
src/: astyle  astyle-code.bat  astyle-code.sh  astyle-options.ini
src/docs/: Changelog  Notes
src/engine/: clientDownload.cpp  clientDownload.hpp
src/engine/API/: CVarSystem_api.h  CVarSystem_api.hpp  CmdBuffer_api.h  CmdBuffer_api.hpp  CmdCompletion_api.hpp  CmdDelay_api.h  CmdDelay_api.hpp  CmdSystem_api.h  CmdSystem_api.hpp  Common_api.hpp  FileSystem_api.h  FileSystem_api.hpp  HashTable_api.hpp  MD4_api.h  MD4_api.hpp  MD5_api.h  MD5_api.hpp  Memory_api.hpp  MessagesToFunctions_api.hpp  NetworkChain_api.h  NetworkChain_api.hpp  Network_api.h  Network_api.hpp  Parse_api.h  Parse_api.hpp  Steamworks_api.hpp  TigerHash_api.hpp  bgame_api.h  bgame_api.hpp  cgame_api.h  cgame_api.hpp  clientAVI_api.h  clientAVI_api.hpp  clientAutoUpdate_api.hpp  clientCinema_api.hpp  clientConsoleCommands_api.hpp  clientConsole_api.hpp  clientDownload_api.hpp  clientGUI_api.h  clientGUI_api.hpp  (+52 more)
src/engine/GPURenderer/: iqm.h  iqm.hpp  qgl.h  qgl.hpp  r_ConsoleVars.cpp  r_ConsoleVars.hpp  r_animation.cpp  r_backend.cpp  r_bsp_tech2.cpp  r_bsp_tech3.cpp  r_cmds.cpp  r_cmdsTemplate.hpp  r_common.h  r_common.hpp  r_curve.cpp  r_dsa.cpp  r_dsa.h  r_dsa.hpp  r_extensions.cpp  r_extramath.cpp  r_extramath.h  r_extramath.hpp  r_extratypes.h  r_extratypes.hpp  r_fbo.cpp  r_fbo.h  r_fbo.hpp  r_flares.cpp  r_font.cpp  r_glimp.cpp  r_glsl.cpp  r_image.cpp  r_image.h  r_image_dds.cpp  r_image_jpg.cpp  r_image_png.cpp  r_image_tga.cpp  r_init.cpp  r_light.cpp  r_local.h  (+26 more)
src/engine/Steamworks/: Steamworks.cpp  Steamworks.hpp
src/engine/audio/: s_adpcm.cpp  s_codec.cpp  s_codec.h  s_codec.hpp  s_codec_ogg.cpp  s_codec_wav.cpp  s_dma.cpp  s_dmahd.cpp  s_dmahd.hpp  s_local.h  s_local.hpp  s_main.cpp  s_mem.cpp  s_mix.cpp  s_openal.cpp  s_wavelet.cpp
src/engine/client/: cl_cin.cpp  cl_console.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_scrn.cpp  client.h  client.hpp  clientAVI.cpp  clientAVI.h  clientAVI.hpp  clientAuthorization.cpp  clientAuthorization.hpp  clientAutoUpdate.cpp  clientAutoUpdate.hpp  clientBrowser.cpp  clientBrowser.h  clientBrowser.hpp  clientCinema.cpp  clientCinema.hpp  clientConsole.cpp  clientConsole.hpp  clientConsoleCommands.cpp  clientConsoleCommands.hpp  clientDemo.cpp  clientDemo.hpp  clientDownload.cpp  clientDownload.hpp  clientGUI.cpp  clientGUI.h  clientGUI.hpp  clientGUID.cpp  clientGUID.hpp  clientGame.cpp  clientGame.h  clientGame.hpp  clientInput.cpp  clientInput.hpp  (+33 more)
src/engine/cm/: cm_bsp.cpp  cm_bsp.hpp  cm_load_tech3.cpp  cm_local.h  cm_local.hpp  cm_patch.cpp  cm_patch.h  cm_patch.hpp  cm_polylib.cpp  cm_polylib.h  cm_polylib.hpp  cm_test.cpp  cm_trace.cpp  cm_trisoup.cpp
src/engine/console/: consoleCurses.cpp  consoleCurses.h  consoleCurses.hpp  consoleHistory.cpp  consoleHistory.hpp  consoleLogging.cpp  consoleLogging.h  consoleLogging.hpp
src/engine/download/: downloadLocal.h  downloadLocal.hpp  downloadMain.cpp
src/engine/framework/: CVarSystem.cpp  CVarSystem.h  CVarSystem.hpp  CmdBuffer.cpp  CmdBuffer.h  CmdBuffer.hpp  CmdCompletion.cpp  CmdCompletion.hpp  CmdDelay.cpp  CmdDelay.h  CmdDelay.hpp  CmdSystem.cpp  CmdSystem.h  CmdSystem.hpp  Common.cpp  Common.hpp  CommonConsoleVars.cpp  CommonConsoleVars.hpp  FileSystem.cpp  FileSystem.h  FileSystem.hpp  HashTable.cpp  HashTable.hpp  Huffman.cpp  Huffman.h  Huffman.hpp  IOAPI.cpp  IOAPI.h  IOAPI.hpp  MD4.cpp  MD4.h  MD4.hpp  MD5.cpp  MD5.h  MD5.hpp  Memory.cpp  Memory.hpp  MessagesToFunctions.cpp  MessagesToFunctions.hpp  Network.cpp  (+29 more)
src/engine/null/: null_autoprecompiled.cpp  null_autoprecompiled.h  null_autoprecompiled.hpp  null_client.cpp  null_input.cpp  null_serverprecompiled.cpp  null_serverprecompiled.h  null_serverprecompiled.hpp
src/engine/platform/: engineMain.def  systemInput.cpp  systemLauncher.cpp  systemLocal.h  systemLocal.hpp  systemMain.cpp  systemSound.cpp
src/engine/qcommon/: common.cpp  md5.cpp  msg.cpp  net_chan.cpp  net_ip.cpp  parse.cpp  q_math.cpp  q_platform.h  q_platform.hpp  q_shared.cpp  q_shared.h  q_shared.hpp  qcommon.h  qcommon.hpp  qfiles.h  qfiles.hpp
src/engine/renderSystem/: iqm.hpp  qgl.hpp  r_ConsoleVars.cpp  r_ConsoleVars.hpp  r_animation.cpp  r_api.cpp  r_backend.cpp  r_bsp_tech2.cpp  r_bsp_tech3.cpp  r_cmds.cpp  r_cmdsTemplate.hpp  r_common.hpp  r_curve.cpp  r_dsa.cpp  r_dsa.hpp  r_extensions.cpp  r_extramath.cpp  r_extramath.hpp  r_extratypes.hpp  r_fbo.cpp  r_fbo.hpp  r_flares.cpp  r_font.cpp  r_glimp.cpp  r_glsl.cpp  r_image.cpp  r_image_dds.cpp  r_image_jpg.cpp  r_image_png.cpp  r_image_tga.cpp  r_init.cpp  r_light.cpp  r_local.hpp  r_main.cpp  r_marks.cpp  r_mesh.cpp  r_model.cpp  r_model_iqm.cpp  r_model_obj.cpp  r_noise.cpp  (+17 more)
src/engine/server/: server.h  server.hpp  serverAutoPrecompiled.cpp  serverAutoPrecompiled.hpp  serverCcmds.cpp  serverCcmds.h  serverCcmds.hpp  serverClient.cpp  serverClient.h  serverClient.hpp  serverCommunity.cpp  serverCommunity.h  serverCommunity.hpp  serverCrypto.cpp  serverCrypto.h  serverDedPrecompiled.cpp  serverDedPrecompiled.hpp  serverDemo.cpp  serverDemo.h  serverDemo.hpp  serverGame.cpp  serverGame.h  serverGame.hpp  serverInit.cpp  serverInit.h  serverInit.hpp  serverMain.cpp  serverMain.h  serverMain.hpp  serverNetChan.cpp  serverNetChan.h  serverNetChan.hpp  serverOACS.cpp  serverOACS.h  serverOACS.hpp  serverSnapshot.cpp  serverSnapshot.h  serverSnapshot.hpp  serverWallhack.cpp  serverWallhack.h  (+4 more)
src/engine/soundSystemAL/: qal.cpp  (+10 more)
(+195 files in other folders)
